--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"firebase": "^10.14.0",
 		"pinia": "^2.2.2",
 		"pinia-plugin-persistedstate": "^4.0.2",
+		"qrcode": "^1.5.4",
 		"socket.io-client": "^4.8.0",
 		"sortablejs": "^1.15.3",
 		"vue": "^3.5.10",
@@ -23,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^22.5.5",
+		"@types/qrcode": "^1.5.5",
 		"@vitejs/plugin-vue": "^5.1.4",
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
